package org.github.foxmk.ice

import org.github.foxmk.ice.classes.CandidatePair

/**
  * @author Artyom Artemiev
  */
class CheckList {

  def candidatePairs: Seq[CandidatePair] = ???

}
