package org.github.foxmk.ice.stun

/**
  *
  *
  * @author Artyom Artemiev
  */
class TransactionManager {

  def get(transactionId: TransactionId): Transaction = ???
  def put()



}

object TransactionManager {

}
